--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,47 @@
-body{
-    background-color: black;
+:root{
+    --primary-color: #102F45;
+    --grey-color: rgb(71, 71, 71);
 }
+
+body{
+    background-color:  var(--primary-color) ;
+}
+
+#site_header h1{
+    height: 80px;
+    line-height: 80px;
+}
+
+.post{
+    background-color: white;
+}
+
+.image_wrapper > img{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+}
+
+.details .name{
+    font-weight: bold;
+}
+
+.details .date_post{
+    color: var(--grey-color)
+}
+
+.content_img img{
+    width: 100%;
+    height: 300px;
+}
+
+#like_button{
+    border: none;
+    background-color: white;
+    color: var(--grey-color)
+} 
+
+.n_likes{
+    font-weight: bold;
+}
+
